buildscript {
    repositories {
        maven {
            name = 'forge'
            url = 'http://files.minecraftforge.net/maven'
        }
        maven {
            name = 'sponge'
            url = 'https://repo.spongepowered.org/maven'
        }
    }
    dependencies {
        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
        classpath 'org.spongepowered:mixingradle:0.6-SNAPSHOT'
    }
}

plugins {
    id 'org.spongepowered.plugin' version '0.9.0'
    id 'net.minecrell.vanillagradle.server' version '2.2-6'
}

apply plugin: 'org.spongepowered.mixin'

sourceCompatibility = 1.8
targetCompatibility = 1.8

group = 'me.mrdaniel.npcs'
version = '4.0.0'
description = 'A plugin that adds simple custom NPCs to your worlds.'

compileJava.options.encoding = 'UTF-8'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

allprojects {
    repositories {
        maven { url 'https://jitpack.io' }
    }
}

dependencies {
    compile 'org.spongepowered:spongeapi:7.2.0-SNAPSHOT'
    compile 'org.spongepowered:mixin:0.7.4-SNAPSHOT'
    compile 'com.github.ronaldburns:PlaceholderAPI:master-SNAPSHOT'
}

minecraft {
    version = '1.12'
    mappings = 'snapshot_20170818'
}

sourceSets {
    main {
        refMap = "mixins.npcs.refmap.json"
    }
}

jar {
    manifest.attributes(
            'FMLCorePluginContainsFMLMod': 'true',
            'TweakClass': 'org.spongepowered.asm.launch.MixinTweaker',
            'MixinConfigs': 'mixins.npcs.json',
            'ForceLoadAsMod': "true"
    )
}
